@@ -979,6 +979,20 @@ int error_count = 0;
             }
         }
 
+#if BOOST_WAVE_USE_DEPRECIATED_PREPROCESSING_HOOKS == 0
+    // suppress expansion of, specified macros
+        if (vm.count("noexpand")) {
+            vector<std::string> const &noexpandmacros = 
+                vm["noexpand"].as<vector<std::string> >();
+            vector<std::string>::const_iterator end = noexpandmacros.end();
+            for (vector<std::string>::const_iterator cit = noexpandmacros.begin(); 
+                 cit != end; ++cit)
+            {
+                ctx.get_hooks().add_noexpandmacro(*cit);
+            }
+        }
+#endif
+
     // maximal include nesting depth
         if (vm.count("nesting")) {
             int max_depth = vm["nesting"].as<int>();
@@ -1236,6 +1250,10 @@ main (int argc, char *argv[])
                 "specify a macro to predefine (as macro[=[value]])")
             ("undefine,U", po::value<vector<std::string> >()->composing(), 
                 "specify a macro to undefine")
+#if BOOST_WAVE_USE_DEPRECIATED_PREPROCESSING_HOOKS == 0
+            ("noexpand,N", po::value<vector<std::string> >()->composing(), 
+                "specify a macro name, which should not be expanded")
+#endif
             ("nesting,n", po::value<int>(), 
                 "specify a new maximal include nesting depth")
         ;
