@@ -19,7 +19,7 @@
 
 #define CPP_VERSION_FULL_STR        BOOST_PP_STRINGIZE(CPP_VERSION_FULL)
 
-#define CPP_VERSION_DATE            20110109L
-#define CPP_VERSION_DATE_STR        "20110109"
+#define CPP_VERSION_DATE            20110507L
+#define CPP_VERSION_DATE_STR        "20110507"
 
 #endif // !defined(CPP_VERSION_HPP_CE4FE67F_63F9_468D_8364_C855F89D3C5D_INCLUDED)
